==========================================================

     iso2mesh - a powerful yet simple-to-use mesh generator

----------------------------------------------------------

iso2mesh ChangeLog:
2010/06/10 (0.9.0pre, codename: Toufu-beta)
        1. added surf2vol, converting a closed surface to a binary volume
        2. fixed deletemeshfile bug for Windows
        3. automatic repairing when meshresample fails
        4. fast faceneighbors unit
        5. added CGAL 3D mesher for robust meshing of segmented volumes
        6. added CGAL 3D polyhedral mesher as an alternative to tetgen
        7. corrected bugs in Laplacian-HC and Lowpass smoothing algorithms
        8. added sms.m as the shortcut for surfsmooth
        9. added exporters for DXF and VRML mesh formats
       10. added user name to the temporary files avoid permission conflict
       11. added force-bounding-box option for surf2mesh
       12. added nodevolume, elemvolume from FEMcore and meshreorient
       13. added sortmesh to optimize node and element ordering
       14. mesh refinement using the 4-th column of surface node
       15. thining a volumetric binary image

2009/05/04 (0.8.0, codename: Hotpot)
        1. added stopping criteria for cgalsurf surface extractor to 
           avoid hanging for certain datasets
        2. added support for mesh generation from 3D gray-scale images
        3. more robust and fast imedge3d (thanks to Aslak Grinsted)
        4. fixed the origins for 'simplify' and 'cgalsurf', the origin is now
           set to the exterior vertex for voxel (1,1,1) (as a cube)
        5. updated documents
        6. renamed "bound" to "face" to avoid confusions
        7. added v2m, v2s and s2m as the shortcuts for vol2mesh, vol2surf 
           and surf2mesh, respectively; added demo script for shortcuts
        8. mcpath searches <iso2mesh>/bin first, no PATH setting is required
           (thanks to Aslak Grinsted)
        9. many other minor fixes and cleaning
